--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services:10.2.6'
+    compile 'com.google.android.gms:play-services:11.0.1'
 
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
+    compile 'com.google.android.gms:play-services-maps:11.0.1'
 
 
     compile 'com.android.support:design:25.1.0'
@@ -79,6 +79,7 @@ dependencies {
     //compile 'com.google.android.material:material:1.0.0-beta01'
 
 
+    compile "com.google.android.gms:play-services-location:11.0.1"
 
 }
 apply plugin: 'com.google.gms.google-services'
