--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,34 +43,44 @@ android {
     productFlavors {
     }
 
-} 
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-
-    compile 'com.google.firebase:firebase-messaging:17.0.0'
-
-
-    /*
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.google.android.gms:play-services:11.0.1'
+
     compile 'com.google.android.gms:play-services-maps:11.0.1'
+
+
     compile 'com.android.support:design:25.1.0'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+
+    //  compile 'com.google.android.gms:play-services:12.0.0'
+    // compile 'com.google.firebase:firebase-database:11.8.0'
+
+
+
     compile "me.leolin:ShortcutBadger:1.1.21@aar"
+
+
+    // compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.firebaseui:firebase-ui:1.1.1'
     compile 'com.firebase:firebase-client-android:2.3.1+'
+  //  compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
     testCompile 'junit:junit:4.12'
+
     compile 'com.squareup.okhttp3:okhttp:3.11.0'
+
+    //compile 'com.google.android.material:material:1.0.0-beta01'
+
+
     compile "com.google.android.gms:play-services-location:11.0.1"
-    */
+
 }
 apply plugin: 'com.google.gms.google-services'
 
