--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-       // classpath 'com.google.gms:google-services:3.0.0'
-        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.google.gms:google-services:3.0.0'
 
     }
 }
