--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,22 +8,25 @@ android {
             storePassword '123456'
         }
     }
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.3'
     useLibrary 'org.apache.http.legacy'
     compileOptions.encoding = 'ISO-8859-1'
     defaultConfig {
         applicationId "sistemasfireg.igp.org.sismosperu"
         minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 23
-        versionName '45'
+        targetSdkVersion 26
+        versionCode 31
+        versionName '52'
         multiDexEnabled true
         signingConfig signingConfigs.config
     }
     dexOptions {
         incremental true
         javaMaxHeapSize "4G"
+    }
+    aaptOptions {
+        cruncherEnabled = false
     }
     buildTypes {
         release {
@@ -45,42 +48,26 @@ android {
 
 }
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services:11.0.1'
-
-    compile 'com.google.android.gms:play-services-maps:11.0.1'
-
-
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
-
-    //  compile 'com.google.android.gms:play-services:12.0.0'
-    // compile 'com.google.firebase:firebase-database:11.8.0'
-
-
-
-    compile "me.leolin:ShortcutBadger:1.1.21@aar"
-
-
-    // compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:design:26.0.2'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.firebaseui:firebase-ui:1.1.1'
-    compile 'com.firebase:firebase-client-android:2.3.1+'
-  //  compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
-
-    compile 'com.squareup.okhttp3:okhttp:3.11.0'
-
-    //compile 'com.google.android.material:material:1.0.0-beta01'
-
-
-    compile "com.google.android.gms:play-services-location:11.0.1"
-
+    compile 'com.google.maps.android:android-maps-utils:0.4.4'
+    compile "me.leolin:ShortcutBadger:1.1.21@aar"
+    implementation 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
 
