--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="sistemasfireg.igp.org.sismosperu">
+    package="sistemasfireg.igp.org.sismosperu"
+    tools:node="replace">
+
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="26" />
+
     <uses-permission android:name="com.htc.launcher.permission.CHANGE_CONFIGURATION"/>
     <uses-permission android:name="com.htc.launcher.permission.MODIFY_AUDIO_SETTINGS"/>
 
@@ -91,18 +96,32 @@
             android:name="sistemasfireg.igp.org.sismosperu.Ultimosismo3"
             android:screenOrientation="portrait" />
 
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/default_notification_channel_id" />
+
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <!--
+             <meta-data        android:name="com.google.firebase.messaging.default_notification_channel_id"
+                 android:value="@string/default_notification_channel
 
 
 
 
+               <meta-data        android:name="com.google.firebase.messaging.default_notification_channel_id"
+                 android:value="@string/default_notification_channel_id"/>
 
-   <!--     <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBn447xeNvDqgwfix69ROb-otRg6e4xWsI" />
--->
+
+
+
+          <meta-data
+                 android:name="com.google.android.maps.v2.API_KEY"
+                 android:value="AIzaSyBn447xeNvDqgwfix69ROb-otRg6e4xWsI" />
+     -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyChRE4B12A8MFwNc4ftdxivF5hXi-e7b3o" />
@@ -198,12 +217,24 @@
             </intent-filter>
         </service>
 
-   -->
-        <service android:name="sistemasfireg.igp.org.sismosperu.FirebaseMessagingService">
+
+       <service android:name="sistemasfireg.igp.org.sismosperu.FirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+   -->
+
+
+
+        <service android:name=".Messagingservicef">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+
 
 
 
